--- a/onestop-provisioning/app/assets/stylesheets/common.css
+++ b/onestop-provisioning/app/assets/stylesheets/common.css
@@ -47,13 +47,13 @@
 .audit_loading_image {
   width: 30px;
   opacity: 0.31;
-  padding-left: 5px;
+  /*padding-left: 5px;*/
 }
 
 .audit_progress_text {
   float:right;
   position: absolute;
-  margin-left: 30px;
+  margin-left: 25px;
   margin-top: -19px;
   font-weight:bold;
   z-index:20;
